--- a/src/componentes/Rodape/Rodape.css
+++ b/src/componentes/Rodape/Rodape.css
@@ -1,33 +1,16 @@
-.footer{
-    background-color: #6278F7;
+.footer {
+    background: #6278F7;
+    color: #FFF;
+    padding: 80px;
     display: flex;
-    justify-content: space-between; 
-    padding: 20px;
+    justify-content: space-between;
     align-items: center;
-    color: #fff;
-    font-weight: bold;
-
 }
 
-
-.footer ul li{
-   margin-right: 32px;
-   display: inline-block;
+.footer ul li {
+    display: inline-block;
+    margin-right: 32px;
 }
-
-.footer  img{
-    max-width: 100px;
-   max-height: 50px;
-   width: auto;
-   height: auto;
- }
-
-.footer section ul li img{
-    max-width: 50px;
-   max-height: 20px;
-   width: auto;
-   height: auto;
- }
 
 .footer ul li:last-child {
     margin-right: 0;
