--- a/src/componentes/Formulario/Formulario.css
+++ b/src/componentes/Formulario/Formulario.css
@@ -1,15 +1,19 @@
 .formulario-container {
+    /*deixa os intens ao lado e o gap deixa o espaçãmento 
+    quando usado o display flex*/
     display: flex;
+    gap: 20px;
+    flex-wrap: wrap; /*quebra a linha quando a tela for menor*/
     justify-content: center;
-    margin: 80px 0;
+    margin: 80px 50px;
 
 }
 .formulario-container .formulario {
-    max-width: 80%;
     background: #F7F7F7;
     box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.08);
     border-radius: 20px;
     padding: 36px 64px;
+    flex: 1;/*dividi , diz que tem direito a um espaço flex, 50% 50%*/
 }
 .formulario-container .formulario h2 {
     font-weight: 400;
